Milestone2/cs335_160120/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     TypeName -> TypeToken
Rule 5     TypeName -> QualifiedIdent
Rule 6     TypeToken -> INT
Rule 7     TypeToken -> FLOAT
Rule 8     TypeToken -> BOOL
Rule 9     TypeToken -> STRING
Rule 10    TypeToken -> TYPE IDENTIFIER
Rule 11    TypeLit -> ArrayType
Rule 12    TypeLit -> ST StructType
Rule 13    TypeLit -> PointerType
Rule 14    TypeLit -> MapType
Rule 15    TypeLit -> SliceType
Rule 16    ST -> <empty>
Rule 17    SliceType -> LSQUARE RSQUARE ElementType
Rule 18    MapType -> MAP LSQUARE KeyType RSQUARE ElementType
Rule 19    KeyType -> Type
Rule 20    ArrayType -> LSQUARE ArrayLength RSQUARE ElementType
Rule 21    ArrayLength -> Expression
Rule 22    ElementType -> Type
Rule 23    StructType -> FuncScope STRUCT LCURL FieldDeclRep RCURL EndScope
Rule 24    FuncScope -> <empty>
Rule 25    FieldDeclRep -> FieldDeclRep FieldDecl SEMICOLON
Rule 26    FieldDeclRep -> epsilon
Rule 27    FieldDecl -> IdentifierList Type
Rule 28    PointerType -> MULTIPLY BaseType
Rule 29    BaseType -> Type
Rule 30    Signature -> Parameters ResultOpt
Rule 31    ResultOpt -> Result
Rule 32    ResultOpt -> epsilon
Rule 33    Result -> Parameters
Rule 34    Result -> Type
Rule 35    Parameters -> LPAREN ParametersList RPAREN
Rule 36    Parameters -> LPAREN RPAREN
Rule 37    ParametersList -> ParameterDecl
Rule 38    ParametersList -> ParametersList COMMA ParameterDecl
Rule 39    ParameterDecl -> IdentifierList Type
Rule 40    ParameterDecl -> Type
Rule 41    Block -> LCURL StatementList RCURL
Rule 42    StatementList -> StatementRep
Rule 43    StatementRep -> StatementRep Statement SEMICOLON
Rule 44    StatementRep -> epsilon
Rule 45    Declaration -> ConstDecl
Rule 46    Declaration -> TypeDecl
Rule 47    Declaration -> VarDecl
Rule 48    TopLevelDecl -> Declaration
Rule 49    TopLevelDecl -> FunctionDecl
Rule 50    ConstDecl -> CONST ConstSpec
Rule 51    ConstDecl -> CONST LPAREN ConstSpecRep RPAREN
Rule 52    ConstSpecRep -> ConstSpecRep ConstSpec SEMICOLON
Rule 53    ConstSpecRep -> epsilon
Rule 54    ConstSpec -> IdentifierList TypeExprListOpt
Rule 55    TypeExprListOpt -> Type EQUALS ExpressionList
Rule 56    IdentifierList -> IDENTIFIER
Rule 57    IdentifierList -> IdentifierRep
Rule 58    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 59    IdentifierRep -> IDENTIFIER COMMA IDENTIFIER
Rule 60    ExpressionList -> Expression ExpressionRep
Rule 61    ExpressionRep -> ExpressionRep COMMA Expression
Rule 62    ExpressionRep -> epsilon
Rule 63    TypeDecl -> TYPE TypeSpec
Rule 64    TypeDecl -> TYPE LPAREN TypeSpecRep RPAREN
Rule 65    TypeSpecRep -> TypeSpecRep TypeSpec SEMICOLON
Rule 66    TypeSpecRep -> epsilon
Rule 67    TypeSpec -> AliasDecl
Rule 68    TypeSpec -> TypeDef
Rule 69    AliasDecl -> IDENTIFIER EQUALS Type
Rule 70    TypeDef -> IDENTIFIER Type
Rule 71    VarDecl -> VAR VarSpec
Rule 72    VarDecl -> VAR LPAREN VarSpecRep RPAREN
Rule 73    VarSpecRep -> VarSpecRep VarSpec SEMICOLON
Rule 74    VarSpecRep -> epsilon
Rule 75    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 76    ExpressionListOpt -> EQUALS ExpressionList
Rule 77    ExpressionListOpt -> epsilon
Rule 78    ShortVarDecl -> IDENTIFIER SHORT_ASSIGNMENT Expression
Rule 79    FunctionDecl -> FUNC FunctionName CreateScope Function EndScope
Rule 80    FunctionDecl -> FUNC FunctionName CreateScope Signature EndScope
Rule 81    CreateScope -> <empty>
Rule 82    EndScope -> <empty>
Rule 83    FunctionName -> IDENTIFIER
Rule 84    Function -> Signature RetTypeSet FunctionBody
Rule 85    RetTypeSet -> <empty>
Rule 86    FunctionBody -> Block
Rule 87    Operand -> Literal
Rule 88    Operand -> OperandName
Rule 89    Operand -> LPAREN Expression RPAREN
Rule 90    Literal -> BasicLit
Rule 91    BasicLit -> I INT_LIT
Rule 92    BasicLit -> F FLOAT_LIT
Rule 93    BasicLit -> C IMAGINARY_LIT
Rule 94    BasicLit -> S STRING_LIT
Rule 95    I -> <empty>
Rule 96    F -> <empty>
Rule 97    C -> <empty>
Rule 98    S -> <empty>
Rule 99    OperandName -> IDENTIFIER
Rule 100   QualifiedIdent -> IDENTIFIER DOT TypeName
Rule 101   PrimaryExpr -> Operand
Rule 102   PrimaryExpr -> PrimaryExpr DOT IDENTIFIER
Rule 103   PrimaryExpr -> Conversion
Rule 104   PrimaryExpr -> PrimaryExpr LSQUARE Expression RSQUARE
Rule 105   PrimaryExpr -> PrimaryExpr Slice
Rule 106   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 107   PrimaryExpr -> PrimaryExpr LPAREN ExpressionListTypeOpt RPAREN
Rule 108   Slice -> LSQUARE ExpressionOpt COLON ExpressionOpt RSQUARE
Rule 109   Slice -> LSQUARE ExpressionOpt COLON Expression COLON Expression RSQUARE
Rule 110   TypeAssertion -> DOT LPAREN Type RPAREN
Rule 111   ExpressionListTypeOpt -> ExpressionList
Rule 112   ExpressionListTypeOpt -> epsilon
Rule 113   Expression -> UnaryExpr
Rule 114   Expression -> Expression COMPARE_OR Expression
Rule 115   Expression -> Expression COMPARE_AND Expression
Rule 116   Expression -> Expression EQEQ Expression
Rule 117   Expression -> Expression NOTEQUALS Expression
Rule 118   Expression -> Expression LESSTHAN Expression
Rule 119   Expression -> Expression GREATERTHAN Expression
Rule 120   Expression -> Expression LESSTHAN_EQUAL Expression
Rule 121   Expression -> Expression GREATERTHAN_EQUAL Expression
Rule 122   Expression -> Expression OR Expression
Rule 123   Expression -> Expression XOR Expression
Rule 124   Expression -> Expression ANDXOR Expression
Rule 125   Expression -> Expression DIVIDE Expression
Rule 126   Expression -> Expression MODULO Expression
Rule 127   Expression -> Expression LSHIFT Expression
Rule 128   Expression -> Expression RSHIFT Expression
Rule 129   Expression -> Expression PLUS Expression
Rule 130   Expression -> Expression MINUS Expression
Rule 131   Expression -> Expression MULTIPLY Expression
Rule 132   Expression -> Expression AND Expression
Rule 133   ExpressionOpt -> Expression
Rule 134   ExpressionOpt -> epsilon
Rule 135   UnaryExpr -> PrimaryExpr
Rule 136   UnaryExpr -> UnaryOp UnaryExpr
Rule 137   UnaryExpr -> NOT UnaryExpr
Rule 138   UnaryOp -> PLUS
Rule 139   UnaryOp -> MINUS
Rule 140   UnaryOp -> MULTIPLY
Rule 141   UnaryOp -> AND
Rule 142   Conversion -> TYPECAST Type LPAREN Expression RPAREN
Rule 143   Statement -> Declaration
Rule 144   Statement -> LabeledStmt
Rule 145   Statement -> SimpleStmt
Rule 146   Statement -> ReturnStmt
Rule 147   Statement -> BreakStmt
Rule 148   Statement -> ContinueStmt
Rule 149   Statement -> GotoStmt
Rule 150   Statement -> CreateScope Block EndScope
Rule 151   Statement -> IfStmt
Rule 152   Statement -> SwitchStmt
Rule 153   Statement -> ForStmt
Rule 154   Statement -> DeferStmt
Rule 155   Statement -> FallThroughStmt
Rule 156   Statement -> GoStmt
Rule 157   Statement -> PrintStmt
Rule 158   Statement -> ScanStmt
Rule 159   PrintStmt -> PRINT PD Expression
Rule 160   PrintStmt -> PRINT PS Expression
Rule 161   ScanStmt -> SCAN Expression
Rule 162   FallThroughStmt -> FALLTHROUGH
Rule 163   GoStmt -> GO Expression
Rule 164   DeferStmt -> DEFER Expression
Rule 165   SimpleStmt -> epsilon
Rule 166   SimpleStmt -> ExpressionStmt
Rule 167   SimpleStmt -> IncDecStmt
Rule 168   SimpleStmt -> Assignment
Rule 169   SimpleStmt -> ShortVarDecl
Rule 170   LabeledStmt -> Label COLON Statement
Rule 171   Label -> IDENTIFIER
Rule 172   ExpressionStmt -> Expression
Rule 173   IncDecStmt -> Expression INCREMENT
Rule 174   IncDecStmt -> Expression DECREMENT
Rule 175   Assignment -> ExpressionList assign_op ExpressionList
Rule 176   assign_op -> AssignOp
Rule 177   AssignOp -> PLUSEQUAL
Rule 178   AssignOp -> MINUSEQUAL
Rule 179   AssignOp -> TIMESEQUAL
Rule 180   AssignOp -> DIVIDE_EQUAL
Rule 181   AssignOp -> MODEQUAL
Rule 182   AssignOp -> ANDEQUAL
Rule 183   AssignOp -> OREQUAL
Rule 184   AssignOp -> XOREQUAL
Rule 185   AssignOp -> ANDXOR_EQUAL
Rule 186   AssignOp -> LSHIFT_EQUAL
Rule 187   AssignOp -> RSHIFT_EQUAL
Rule 188   AssignOp -> EQUALS
Rule 189   IfStmt -> IF Expression CreateScope IFSYM Block EndScope ElseOpt
Rule 190   IFSYM -> <empty>
Rule 191   ElseOpt -> ELSE IfStmt
Rule 192   ElseOpt -> ELSE CreateScope Block EndScope
Rule 193   ElseOpt -> epsilon
Rule 194   SwitchStmt -> ExprSwitchStmt
Rule 195   ExprSwitchStmt -> SWITCH Expression CreateScope LCURL StartSwitch ExprCaseClauseList RCURL EndScope
Rule 196   StartSwitch -> <empty>
Rule 197   ExprCaseClauseList -> epsilon
Rule 198   ExprCaseClauseList -> ExprCaseClauseList ExprCaseClause
Rule 199   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 200   ExprSwitchCase -> CASE ExpressionList
Rule 201   ExprSwitchCase -> DEFAULT
Rule 202   ForStmt -> FOR CreateScope ConditionBlockOpt Block EndScope
Rule 203   ConditionBlockOpt -> epsilon
Rule 204   ConditionBlockOpt -> Condition
Rule 205   ConditionBlockOpt -> ForClause
Rule 206   Condition -> Expression
Rule 207   ForClause -> SimpleStmt SEMICOLON ConditionOpt SEMICOLON SimpleStmt
Rule 208   ConditionOpt -> epsilon
Rule 209   ConditionOpt -> Condition
Rule 210   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 211   ExpressionListPureOpt -> ExpressionList
Rule 212   ExpressionListPureOpt -> epsilon
Rule 213   BreakStmt -> BREAK LabelOpt
Rule 214   ContinueStmt -> CONTINUE LabelOpt
Rule 215   LabelOpt -> Label
Rule 216   LabelOpt -> epsilon
Rule 217   GotoStmt -> GOTO Label
Rule 218   SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
Rule 219   ImportDeclRep -> epsilon
Rule 220   ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON
Rule 221   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl SEMICOLON
Rule 222   TopLevelDeclRep -> epsilon
Rule 223   PackageClause -> PACKAGE PackageName
Rule 224   PackageName -> IDENTIFIER
Rule 225   ImportDecl -> IMPORT ImportSpec
Rule 226   ImportDecl -> IMPORT LPAREN ImportSpecRep RPAREN
Rule 227   ImportSpecRep -> ImportSpecRep ImportSpec SEMICOLON
Rule 228   ImportSpecRep -> epsilon
Rule 229   ImportSpec -> PackageNameDotOpt ImportPath
Rule 230   PackageNameDotOpt -> DOT
Rule 231   PackageNameDotOpt -> PackageName
Rule 232   PackageNameDotOpt -> epsilon
Rule 233   ImportPath -> STRING_LIT
Rule 234   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 132 141
ANDEQUAL             : 182
ANDXOR               : 124
ANDXOR_EQUAL         : 185
BOOL                 : 8
BREAK                : 213
CASE                 : 200
COLON                : 108 109 109 170 199
COMMA                : 38 58 59 61
COMPARE_AND          : 115
COMPARE_OR           : 114
CONST                : 50 51
CONTINUE             : 214
DECREMENT            : 174
DEFAULT              : 201
DEFER                : 164
DIVIDE               : 125
DIVIDE_EQUAL         : 180
DOT                  : 100 102 110 230
ELSE                 : 191 192
EQEQ                 : 116
EQUALS               : 55 69 76 188
FALLTHROUGH          : 162
FLOAT                : 7
FLOAT_LIT            : 92
FOR                  : 202
FUNC                 : 79 80
GO                   : 163
GOTO                 : 217
GREATERTHAN          : 119
GREATERTHAN_EQUAL    : 121
IDENTIFIER           : 10 56 58 59 59 69 70 78 83 99 100 102 171 224
IF                   : 189
IMAGINARY_LIT        : 93
IMPORT               : 225 226
INCREMENT            : 173
INT                  : 6
INT_LIT              : 91
LCURL                : 23 41 195
LESSTHAN             : 118
LESSTHAN_EQUAL       : 120
LPAREN               : 35 36 51 64 72 89 107 110 142 226
LSHIFT               : 127
LSHIFT_EQUAL         : 186
LSQUARE              : 17 18 20 104 108 109
MAP                  : 18
MINUS                : 130 139
MINUSEQUAL           : 178
MODEQUAL             : 181
MODULO               : 126
MULTIPLY             : 28 131 140
NOT                  : 137
NOTEQUALS            : 117
OR                   : 122
OREQUAL              : 183
PACKAGE              : 223
PD                   : 159
PLUS                 : 129 138
PLUSEQUAL            : 177
PRINT                : 159 160
PS                   : 160
RCURL                : 23 41 195
RETURN               : 210
RPAREN               : 35 36 51 64 72 89 107 110 142 226
RSHIFT               : 128
RSHIFT_EQUAL         : 187
RSQUARE              : 17 18 20 104 108 109
SCAN                 : 161
SEMICOLON            : 25 43 52 65 73 207 207 218 220 221 227
SHORT_ASSIGNMENT     : 78
STRING               : 9
STRING_LIT           : 94 233
STRUCT               : 23
SWITCH               : 195
TIMESEQUAL           : 179
TYPE                 : 10 63 64
TYPECAST             : 142
VAR                  : 71 72
XOR                  : 123
XOREQUAL             : 184
error                : 

Nonterminals, with rules where they appear

AliasDecl            : 67
ArrayLength          : 20
ArrayType            : 11
AssignOp             : 176
Assignment           : 168
BaseType             : 28
BasicLit             : 90
Block                : 86 150 189 192 202
BreakStmt            : 147
C                    : 93
Condition            : 204 209
ConditionBlockOpt    : 202
ConditionOpt         : 207
ConstDecl            : 45
ConstSpec            : 50 52
ConstSpecRep         : 51 52
ContinueStmt         : 148
Conversion           : 103
CreateScope          : 79 80 150 189 192 195 202
Declaration          : 48 143
DeferStmt            : 154
ElementType          : 17 18 20
ElseOpt              : 189
EndScope             : 23 79 80 150 189 192 195 202
ExprCaseClause       : 198
ExprCaseClauseList   : 195 198
ExprSwitchCase       : 199
ExprSwitchStmt       : 194
Expression           : 21 60 61 78 89 104 109 109 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 142 159 160 161 163 164 172 173 174 189 195 206
ExpressionList       : 55 76 111 175 175 200 211
ExpressionListOpt    : 75
ExpressionListPureOpt : 210
ExpressionListTypeOpt : 107
ExpressionOpt        : 108 108 109
ExpressionRep        : 60 61
ExpressionStmt       : 166
F                    : 92
FallThroughStmt      : 155
FieldDecl            : 25
FieldDeclRep         : 23 25
ForClause            : 205
ForStmt              : 153
FuncScope            : 23
Function             : 79
FunctionBody         : 84
FunctionDecl         : 49
FunctionName         : 79 80
GoStmt               : 156
GotoStmt             : 149
I                    : 91
IFSYM                : 189
IdentifierList       : 27 39 54 75
IdentifierRep        : 57 58
IfStmt               : 151 191
ImportDecl           : 220
ImportDeclRep        : 218 220
ImportPath           : 229
ImportSpec           : 225 227
ImportSpecRep        : 226 227
IncDecStmt           : 167
KeyType              : 18
Label                : 170 215 217
LabelOpt             : 213 214
LabeledStmt          : 144
Literal              : 87
MapType              : 14
Operand              : 101
OperandName          : 88
PackageClause        : 218
PackageName          : 223 231
PackageNameDotOpt    : 229
ParameterDecl        : 37 38
Parameters           : 30 33
ParametersList       : 35 38
PointerType          : 13
PrimaryExpr          : 102 104 105 106 107 135
PrintStmt            : 157
QualifiedIdent       : 5
Result               : 31
ResultOpt            : 30
RetTypeSet           : 84
ReturnStmt           : 146
S                    : 94
ST                   : 12
ScanStmt             : 158
ShortVarDecl         : 169
Signature            : 80 84
SimpleStmt           : 145 207 207
Slice                : 105
SliceType            : 15
SourceFile           : 1
StartSwitch          : 195
Statement            : 43 170
StatementList        : 41 199
StatementRep         : 42 43
StructType           : 12
SwitchStmt           : 152
TopLevelDecl         : 221
TopLevelDeclRep      : 218 221
Type                 : 19 22 27 29 34 39 40 55 69 70 75 110 142
TypeAssertion        : 106
TypeDecl             : 46
TypeDef              : 68
TypeExprListOpt      : 54
TypeLit              : 3
TypeName             : 2 100
TypeSpec             : 63 65
TypeSpecRep          : 64 65
TypeToken            : 4
UnaryExpr            : 113 136 137
UnaryOp              : 136
VarDecl              : 47
VarSpec              : 71 73
VarSpecRep           : 72 73
assign_op            : 175
epsilon              : 26 32 44 53 62 66 74 77 112 134 165 193 197 203 208 212 216 219 222 228 232
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (218) SourceFile -> . PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
    (223) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3
    start                          shift and go to state 4

state 1

    (218) SourceFile -> PackageClause . SEMICOLON ImportDeclRep TopLevelDeclRep

    SEMICOLON       shift and go to state 5


state 2

    (223) PackageClause -> PACKAGE . PackageName
    (224) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 3

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 4

    (0) S' -> start .



state 5

    (218) SourceFile -> PackageClause SEMICOLON . ImportDeclRep TopLevelDeclRep
    (219) ImportDeclRep -> . epsilon
    (220) ImportDeclRep -> . ImportDeclRep ImportDecl SEMICOLON
    (234) epsilon -> .

    IMPORT          reduce using rule 234 (epsilon -> .)
    FUNC            reduce using rule 234 (epsilon -> .)
    CONST           reduce using rule 234 (epsilon -> .)
    TYPE            reduce using rule 234 (epsilon -> .)
    VAR             reduce using rule 234 (epsilon -> .)
    $end            reduce using rule 234 (epsilon -> .)

    ImportDeclRep                  shift and go to state 9
    epsilon                        shift and go to state 8

state 6

    (223) PackageClause -> PACKAGE PackageName .

    SEMICOLON       reduce using rule 223 (PackageClause -> PACKAGE PackageName .)


state 7

    (224) PackageName -> IDENTIFIER .

    STRING_LIT      reduce using rule 224 (PackageName -> IDENTIFIER .)
    SEMICOLON       reduce using rule 224 (PackageName -> IDENTIFIER .)


state 8

    (219) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 219 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 219 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 219 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 219 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 219 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 219 (ImportDeclRep -> epsilon .)


state 9

    (218) SourceFile -> PackageClause SEMICOLON ImportDeclRep . TopLevelDeclRep
    (220) ImportDeclRep -> ImportDeclRep . ImportDecl SEMICOLON
    (221) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl SEMICOLON
    (222) TopLevelDeclRep -> . epsilon
    (225) ImportDecl -> . IMPORT ImportSpec
    (226) ImportDecl -> . IMPORT LPAREN ImportSpecRep RPAREN
    (234) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 234 (epsilon -> .)
    CONST           reduce using rule 234 (epsilon -> .)
    TYPE            reduce using rule 234 (epsilon -> .)
    VAR             reduce using rule 234 (epsilon -> .)
    $end            reduce using rule 234 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 10
    epsilon                        shift and go to state 11
    ImportDecl                     shift and go to state 12

state 10

    (218) SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .
    (221) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl SEMICOLON
    (48) TopLevelDecl -> . Declaration
    (49) TopLevelDecl -> . FunctionDecl
    (45) Declaration -> . ConstDecl
    (46) Declaration -> . TypeDecl
    (47) Declaration -> . VarDecl
    (79) FunctionDecl -> . FUNC FunctionName CreateScope Function EndScope
    (80) FunctionDecl -> . FUNC FunctionName CreateScope Signature EndScope
    (50) ConstDecl -> . CONST ConstSpec
    (51) ConstDecl -> . CONST LPAREN ConstSpecRep RPAREN
    (63) TypeDecl -> . TYPE TypeSpec
    (64) TypeDecl -> . TYPE LPAREN TypeSpecRep RPAREN
    (71) VarDecl -> . VAR VarSpec
    (72) VarDecl -> . VAR LPAREN VarSpecRep RPAREN

    $end            reduce using rule 218 (SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 20
    CONST           shift and go to state 14
    TYPE            shift and go to state 23
    VAR             shift and go to state 21

    TypeDecl                       shift and go to state 19
    VarDecl                        shift and go to state 22
    FunctionDecl                   shift and go to state 15
    TopLevelDecl                   shift and go to state 16
    Declaration                    shift and go to state 17
    ConstDecl                      shift and go to state 18

state 11

    (222) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 222 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 222 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 222 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 222 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 222 (TopLevelDeclRep -> epsilon .)


state 12

    (220) ImportDeclRep -> ImportDeclRep ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 24


state 13

    (225) ImportDecl -> IMPORT . ImportSpec
    (226) ImportDecl -> IMPORT . LPAREN ImportSpecRep RPAREN
    (229) ImportSpec -> . PackageNameDotOpt ImportPath
    (230) PackageNameDotOpt -> . DOT
    (231) PackageNameDotOpt -> . PackageName
    (232) PackageNameDotOpt -> . epsilon
    (224) PackageName -> . IDENTIFIER
    (234) epsilon -> .

    LPAREN          shift and go to state 25
    DOT             shift and go to state 30
    IDENTIFIER      shift and go to state 7
    STRING_LIT      reduce using rule 234 (epsilon -> .)

    ImportSpec                     shift and go to state 26
    epsilon                        shift and go to state 27
    PackageName                    shift and go to state 28
    PackageNameDotOpt              shift and go to state 29

state 14

    (50) ConstDecl -> CONST . ConstSpec
    (51) ConstDecl -> CONST . LPAREN ConstSpecRep RPAREN
    (54) ConstSpec -> . IdentifierList TypeExprListOpt
    (56) IdentifierList -> . IDENTIFIER
    (57) IdentifierList -> . IdentifierRep
    (58) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (59) IdentifierRep -> . IDENTIFIER COMMA IDENTIFIER

    LPAREN          shift and go to state 33
    IDENTIFIER      shift and go to state 35

    ConstSpec                      shift and go to state 31
    IdentifierRep                  shift and go to state 32
    IdentifierList                 shift and go to state 34

state 15

    (49) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 49 (TopLevelDecl -> FunctionDecl .)


state 16

    (221) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 36


state 17

    (48) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 48 (TopLevelDecl -> Declaration .)


state 18

    (45) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 45 (Declaration -> ConstDecl .)


state 19

    (46) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 46 (Declaration -> TypeDecl .)


state 20

    (79) FunctionDecl -> FUNC . FunctionName CreateScope Function EndScope
    (80) FunctionDecl -> FUNC . FunctionName CreateScope Signature EndScope
    (83) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 37

    FunctionName                   shift and go to state 38

state 21

    (71) VarDecl -> VAR . VarSpec
    (72) VarDecl -> VAR . LPAREN VarSpecRep RPAREN
    (75) VarSpec -> . IdentifierList Type ExpressionListOpt
    (56) IdentifierList -> . IDENTIFIER
    (57) IdentifierList -> . IdentifierRep
    (58) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (59) IdentifierRep -> . IDENTIFIER COMMA IDENTIFIER

    LPAREN          shift and go to state 40
    IDENTIFIER      shift and go to state 35

    IdentifierRep                  shift and go to state 32
    VarSpec                        shift and go to state 39
    IdentifierList                 shift and go to state 41

state 22

    (47) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 47 (Declaration -> VarDecl .)


state 23

    (63) TypeDecl -> TYPE . TypeSpec
    (64) TypeDecl -> TYPE . LPAREN TypeSpecRep RPAREN
    (67) TypeSpec -> . AliasDecl
    (68) TypeSpec -> . TypeDef
    (69) AliasDecl -> . IDENTIFIER EQUALS Type
    (70) TypeDef -> . IDENTIFIER Type

    LPAREN          shift and go to state 44
    IDENTIFIER      shift and go to state 46

    TypeSpec                       shift and go to state 45
    TypeDef                        shift and go to state 42
    AliasDecl                      shift and go to state 43

state 24

    (220) ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .

    IMPORT          reduce using rule 220 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    FUNC            reduce using rule 220 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    CONST           reduce using rule 220 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    TYPE            reduce using rule 220 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    VAR             reduce using rule 220 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)
    $end            reduce using rule 220 (ImportDeclRep -> ImportDeclRep ImportDecl SEMICOLON .)


state 25

    (226) ImportDecl -> IMPORT LPAREN . ImportSpecRep RPAREN
    (227) ImportSpecRep -> . ImportSpecRep ImportSpec SEMICOLON
    (228) ImportSpecRep -> . epsilon
    (234) epsilon -> .

    RPAREN          reduce using rule 234 (epsilon -> .)
    DOT             reduce using rule 234 (epsilon -> .)
    IDENTIFIER      reduce using rule 234 (epsilon -> .)
    STRING_LIT      reduce using rule 234 (epsilon -> .)

    epsilon                        shift and go to state 47
    ImportSpecRep                  shift and go to state 48

state 26

    (225) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 225 (ImportDecl -> IMPORT ImportSpec .)


state 27

    (232) PackageNameDotOpt -> epsilon .

    STRING_LIT      reduce using rule 232 (PackageNameDotOpt -> epsilon .)


state 28

    (231) PackageNameDotOpt -> PackageName .

    STRING_LIT      reduce using rule 231 (PackageNameDotOpt -> PackageName .)


state 29

    (229) ImportSpec -> PackageNameDotOpt . ImportPath
    (233) ImportPath -> . STRING_LIT

    STRING_LIT      shift and go to state 50

    ImportPath                     shift and go to state 49

state 30

    (230) PackageNameDotOpt -> DOT .

    STRING_LIT      reduce using rule 230 (PackageNameDotOpt -> DOT .)


state 31

    (50) ConstDecl -> CONST ConstSpec .

    SEMICOLON       reduce using rule 50 (ConstDecl -> CONST ConstSpec .)


state 32

    (57) IdentifierList -> IdentifierRep .
    (58) IdentifierRep -> IdentifierRep . COMMA IDENTIFIER

    INT             reduce using rule 57 (IdentifierList -> IdentifierRep .)
    FLOAT           reduce using rule 57 (IdentifierList -> IdentifierRep .)
    BOOL            reduce using rule 57 (IdentifierList -> IdentifierRep .)
    STRING          reduce using rule 57 (IdentifierList -> IdentifierRep .)
    TYPE            reduce using rule 57 (IdentifierList -> IdentifierRep .)
    IDENTIFIER      reduce using rule 57 (IdentifierList -> IdentifierRep .)
    LSQUARE         reduce using rule 57 (IdentifierList -> IdentifierRep .)
    MULTIPLY        reduce using rule 57 (IdentifierList -> IdentifierRep .)
    MAP             reduce using rule 57 (IdentifierList -> IdentifierRep .)
    STRUCT          reduce using rule 57 (IdentifierList -> IdentifierRep .)
    COMMA           shift and go to state 51


state 33

    (51) ConstDecl -> CONST LPAREN . ConstSpecRep RPAREN
    (52) ConstSpecRep -> . ConstSpecRep ConstSpec SEMICOLON
    (53) ConstSpecRep -> . epsilon
    (234) epsilon -> .

    RPAREN          reduce using rule 234 (epsilon -> .)
    IDENTIFIER      reduce using rule 234 (epsilon -> .)

    ConstSpecRep                   shift and go to state 52
    epsilon                        shift and go to state 53

state 34

    (54) ConstSpec -> IdentifierList . TypeExprListOpt
    (55) TypeExprListOpt -> . Type EQUALS ExpressionList
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) TypeName -> . TypeToken
    (5) TypeName -> . QualifiedIdent
    (11) TypeLit -> . ArrayType
    (12) TypeLit -> . ST StructType
    (13) TypeLit -> . PointerType
    (14) TypeLit -> . MapType
    (15) TypeLit -> . SliceType
    (6) TypeToken -> . INT
    (7) TypeToken -> . FLOAT
    (8) TypeToken -> . BOOL
    (9) TypeToken -> . STRING
    (10) TypeToken -> . TYPE IDENTIFIER
    (100) QualifiedIdent -> . IDENTIFIER DOT TypeName
    (20) ArrayType -> . LSQUARE ArrayLength RSQUARE ElementType
    (16) ST -> .
    (28) PointerType -> . MULTIPLY BaseType
    (18) MapType -> . MAP LSQUARE KeyType RSQUARE ElementType
    (17) SliceType -> . LSQUARE RSQUARE ElementType

    INT             shift and go to state 66
    FLOAT           shift and go to state 67
    BOOL            shift and go to state 70
    STRING          shift and go to state 62
    TYPE            shift and go to state 72
    IDENTIFIER      shift and go to state 60
    LSQUARE         shift and go to state 64
    STRUCT          reduce using rule 16 (ST -> .)
    MULTIPLY        shift and go to state 55
    MAP             shift and go to state 65

    TypeToken                      shift and go to state 57
    Type                           shift and go to state 58
    ArrayType                      shift and go to state 54
    ST                             shift and go to state 68
    TypeName                       shift and go to state 59
    TypeExprListOpt                shift and go to state 69
    MapType                        shift and go to state 63
    PointerType                    shift and go to state 71
    TypeLit                        shift and go to state 56
    QualifiedIdent                 shift and go to state 73
    SliceType                      shift and go to state 61

state 35

    (56) IdentifierList -> IDENTIFIER .
    (59) IdentifierRep -> IDENTIFIER . COMMA IDENTIFIER
